i corrected a contrast issue

--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -61,11 +61,15 @@ nav{
 
 
 h1{
+    display: inline-block;
+    padding: 3px 6px;
+    border-radius: 5px;
     font-family: var(--main-font);
     font-size: 1.5rem;
     font-weight: bolder;
     margin-left: 1rem;
-    color: black;
+    background-color: var(--primary-color);
+    color: white;
     margin: 0.8rem;
 }
 
